prevent floating msgs from causing scrollbar

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -88,6 +88,7 @@ h1 {
 }
 #floating-msg-container {
   position: absolute;
+  overflow: hidden;
   top: 0;
   left: 0;
   width: 100%;
